Signup unpermitted error

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :Password %>
-    <%= form.text_field :Password, id: :customer_Password %>
+    <%= form.password_field :password %>
   </div>
 
   <div class="field">
