--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -8,7 +8,7 @@
       <th>Username</th>
       <th>Email</th>
       <th>No of cars rented</th>
-      <th>Password</th>
+      <!-- <th>Password</th> -->
       <th>Rental charge</th>
       <th colspan="3"></th>
     </tr>
@@ -20,7 +20,7 @@
         <td><%= customer.Username %></td>
         <td><%= customer.Email %></td>
         <td><%= customer.No_Of_Cars_Rented %></td>
-        <td><%= customer.Password %></td>
+        <!-- <td><%= customer.Password %></td> -->
         <td><%= customer.Rental_Charge %></td>
         <td><%= link_to 'Show', customer %></td>
         <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
