--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,27 @@
 <h1>Editing Customer</h1>
 
-<%= render 'form', customer: @customer %>
 
-<%= link_to 'Show', @customer %> |
-<%= link_to 'Back', customers_path %>
+
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@customer) do |f| %>
+
+
+        <%= f.label :name %>
+        <%= f.text_field :Username, class: 'form-control' %>
+
+        <%= f.label :email %>
+        <%= f.email_field :Email, class: 'form-control' %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control' %>
+
+        <%= f.submit "Save changes", class: "btn btn-primary" %>
+    <% end %>
+
+  </div>
+
+  <%= link_to 'Show', @customer %> |
+  <%= link_to 'Back', customers_path %>
+</div>
