--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -21,4 +21,6 @@
 </p>
 
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
+<% if @customer.role == "admin" %>
 <%= link_to 'Back', customers_path %>
+<% end %>
