--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Cars</h1>
 
+<%= form_tag(cars_path, method: :get) do %>
+    <%= text_field_tag :term, params[:term] %>
+    <%= submit_tag 'Search', Model:nil %>
+<% end %>
 <table>
   <thead>
     <tr>
