--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -11,43 +11,35 @@
     <%= submit_tag 'Search', Model:nil %>
 <% end %>
 
-<%# form_tag :action => 'search_by_loc' do %>
-    <%#= text_field_tag :term, params[:term] %>
-    <%# submit_tag 'Search Location', Model:nil %>
-<%# end %>
-
 <table>
   <thead>
-    <tr>
-      <th>Status</th>
-      <th>Model</th>
-      <th>Manufacturer</th>
-      <th>Rate</th>
-      <th>License tag</th>
-      <th>Style</th>
-      <th>Location</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Status</th>
+    <th>Model</th>
+    <th>Manufacturer</th>
+    <th>Rate</th>
+    <th>License tag</th>
+    <th>Style</th>
+    <th>Location</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-      <% flash.each do |key, value| %>
-          <div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
-      <% @cars.each do |car| %>
-        <tr>
-          <td><%= car.Status %></td>
-          <td><%= car.Model %></td>
-          <td><%= car.Manufacturer %></td>
-          <td><%= car.Rate %></td>
-          <td><%= car.License_Tag %></td>
-          <td><%= car.Style %></td>
-          <td><%= car.Location %></td>
-          <td><%= link_to 'Show', car %></td>
-          <td><%= link_to 'Edit', edit_car_path(car) %></td>
-          <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
+  <% @cars.each do |car| %>
+      <tr>
+        <td><%= car.Status %></td>
+        <td><%= car.Model %></td>
+        <td><%= car.Manufacturer %></td>
+        <td><%= car.Rate %></td>
+        <td><%= car.License_Tag %></td>
+        <td><%= car.Style %></td>
+        <td><%= car.Location %></td>
+        <td><%= link_to 'Show', car %></td>
+        <td><%#= link_to 'Edit', edit_car_path(car) %></td>
+        <td><%#= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+  <% end %>
   </tbody>
 </table>
 
